--- a/udqAutoApp/www/main.html
+++ b/udqAutoApp/www/main.html
@@ -14,6 +14,7 @@
     <link href="css/ownMenu.css" rel="stylesheet" />
     <link href="css/star.css" rel="stylesheet" />
     <link href="css/index.css" rel="stylesheet" />
+    <link href="css/udqicon.css" rel="stylesheet" />
 
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <!-- Cordova 引用，它在生成应用程序时添加到其中。 -->
@@ -28,6 +29,7 @@
     <script src="app/customer/home/homeCtrl.js"></script>
     <script src="app/customer/member/memberCenterCtrl.js"></script>
     <script src="app/customer/member/memberInfoSvr.js"></script>
+    <script src="app/customer/member/rechargeCtrl.js"></script>
     <script src="app/customer/order/orderCtrl.js"></script>    
     <script src="app/customer/order/orderSvr.js"></script>
     <script src="app/customer/order/orderMakeCtrl.js"></script>
