--- a/udqAutoApp/www/app/customer/auto/autoList.html
+++ b/udqAutoApp/www/app/customer/auto/autoList.html
@@ -1,19 +1,19 @@
 <ion-view view-title="车辆列表" class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-chevron-left" ng-click="goBackOfAuto()" style="color:white;width:33px;font-size:25px"></button>
+            <button class="button button-clear icon ion-ios-arrow-back" ng-click="goBackOfAuto()"></button>
         </ion-nav-buttons>
 
         <ion-nav-buttons side="right">
-            <button class="button-clear icon ion-plus-round" ng-click="goToAddauto()" style="color:white;width:33px;font-size:25px"></button>
+            <button class="button button-clear icon ion-plus-round" ng-click="goToAddauto()"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
-    <ion-content padding="true" class="has-header">
+    <ion-content>
         <div style="text-align:center;margin-top:5px;" ng-show="hasNoAuto"><p>暂无车辆,赶紧来添加吧</p></div>
         <ion-refresher on-refresh="doRefresh()"></ion-refresher>
         
         <ion-list class="input-costume">
-                <ion-radio class="input-costume-radio" ng-model="selectedAuto.selectedAutoId" ng-click="goBackOfAuto()" value={{auto.id}} ng-repeat="auto in autoInfo"><p style="color:black;">{{auto.pn}}</p></ion-radio>
+                <ion-radio class="input-costume-radio" ng-model="selectedAuto.selectedAutoId" ng-click="goBackOfAuto()" value={{auto.id}} ng-repeat="auto in autoInfo"><p style="color:#383641;">{{auto.pn}}</p></ion-radio>
         </ion-list>
 
     </ion-content>
