--- a/udqAutoApp/www/app/customer/auto/autoMgr.html
+++ b/udqAutoApp/www/app/customer/auto/autoMgr.html
@@ -1,12 +1,11 @@
 <ion-view view-title="车辆列表" class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-chevron-left" ng-click="goBack()" style="color:white;width:33px;font-size:25px"></button>
+            <button class="button button-clear icon ion-ios-arrow-back" ng-click="goBack()"></button>
         </ion-nav-buttons>
 
         <ion-nav-buttons side="right">
-            <button class="button-clear icon ion-plus-round" ng-click="goToAddauto()" style="color:white;width:33px;font-size:25px">
-            </button>
+            <button class="button button-clear icon ion-plus-round" ng-click="goToAddauto()"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content>
@@ -15,7 +14,7 @@
             <p>暂无车辆,赶紧来添加吧</p>
         </div>
         <ion-list>
-            <ion-item ng-repeat="auto in autoInfo" class="input-costume">
+            <ion-item ng-repeat="auto in autoInfo" ng-click="goToAutoInfo(auto)" class="input-costume">
                 <p>车牌号：{{auto.pn}}</p>
                 <p>品牌:{{auto.brand}}&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 型号：{{auto.model}}</p>
                 <ion-option-button class="button-assertive" ng-click="deleteAuto(auto)" ><span class="input-label"><p>删除</p></span></ion-option-button>
