--- a/udqAutoApp/www/app/customer/member/memberCenter.html
+++ b/udqAutoApp/www/app/customer/member/memberCenter.html
@@ -1,25 +1,25 @@
 <ion-view title="我的点趣" class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-chevron-left" ng-click="goBack()" style="color:white;width:33px;font-size:25px"></button>
+            <button class="button button-clear icon ion-ios-arrow-back" ng-click="goBack()"></button>
         </ion-nav-buttons>
         <ion-nav-buttons side="right">
-            <button class="button-clear" ng-click="exitCurrentUser()" style="color:#fafb75;font-weight:600;">注销</button>
+            <button class="button button-clear" ng-click="exitCurrentUser()" style="color:#fafb75;font-weight:600;">注销</button>
         </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content padding="true" class="has-header">
-        <form>
             <div class="row" style="border-bottom:1px solid white;">
-                <div class="col col-20">
+                <div class="col col-30">
                     <img src="image/mydianqu.png" style="height:100%;width:100%;"/>
                 </div>
                 <div class="col col-50">
                     <p ng-show="user.name!=undefined">称呼：{{user.name}}</p>
-                    <p ng-show="user.mobile!=undefined">手机：{{user.mobile}}</p>                    
+                    <p ng-show="user.mobile!=undefined">手机：{{user.mobile}}</p> 
+                    <p ng-show="user.mobile!=undefined">余额：<a class="a-custome">{{user.balance}}</a>&nbsp;&nbsp;&nbsp;<button class="button-clear" ng-click="goToRecharger()" style="color:#fafb75;font-weight:600;border-color:#fafb75">充值</button></p>                    
                 </div>
                 <div class="col col-20 col-center">
                     <button class="item item-icon-right" ng-click="goToEditOwnerInfo()" style="border-color:#17bed0;background-color:#17bed0;">
-                        <i class="icon ion-ios-arrow-forward"></i>
+                        <i class="icon ion-ios-arrow-forward" style="font-size:50px"></i>
                     </button>
                     
                 </div>
@@ -43,9 +43,15 @@
                         </button>
                         <p class="home-p">我的车辆</p>
                     </div>
-
                 </div>
             </div>
-        </form>
+            <!--<div class="col col-50">
+                <div class="col col-50 div-col-innerdiv">
+                    <button class="button ownbutton-circle" ng-click="goToRecharge()">
+                        <img src="image/iwantwash.png" style="vertical-align:central; height:100%; width:100%;" />
+                    </button>
+                    <p class="home-p">充值&nbsp;&nbsp;<a class="a-custome">{{balance.amount|currency:'￥'}}</a></p>
+                </div>
+            </div>-->
     </ion-content>
 </ion-view>
