--- a/udqAutoApp/www/app/customer/member/washShopInfo.html
+++ b/udqAutoApp/www/app/customer/member/washShopInfo.html
@@ -1,10 +1,10 @@
 ﻿<ion-view title="洗车店信息" class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-chevron-left" ng-click="goToCenter()" style="color:white;width:33px;font-size:25px"></button>
+            <button class="button button-clear icon ion-ios-arrow-back" ng-click="goToCenter()"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
-    <ion-content padding="true" class="has-header">
+    <ion-content>
         <ion-list>
             <ion-item ng-repeat="shop in washShopInfo" class="input-costume">
                 <div class="row">
