--- a/udqAutoApp/www/app/customer/order/orderList.html
+++ b/udqAutoApp/www/app/customer/order/orderList.html
@@ -1,7 +1,7 @@
 ﻿<ion-view title="我的订单" class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-chevron-left" ng-click="goBackOfMain()" style="color:white;width:33px;font-size:25px"></button>
+            <button class="button button-clear icon ion-ios-arrow-back" ng-click="goBackOfMain()"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
     <!--订单展示-->
@@ -10,7 +10,7 @@
             <ion-nav-view name="recentlyOrder-tab"></ion-nav-view>
         </ion-tab>
 
-        <ion-tab title="历史"  id="div_history"  style="background-color:rgba(23, 190, 208, 0);" href="#/customerMyOrder/historyOrder?orderDate=history">
+        <ion-tab title="一个月前"  id="div_history"  style="background-color:rgba(23, 190, 208, 0);" href="#/customerMyOrder/historyOrder?orderDate=history">
             <ion-nav-view name="historyOrder-tab"></ion-nav-view>
         </ion-tab>
 
