--- a/udqAutoApp/www/app/customer/order/orderPay.html
+++ b/udqAutoApp/www/app/customer/order/orderPay.html
@@ -1,11 +1,11 @@
 ﻿<ion-view view-title="选择支付方式" class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-chevron-left" ng-click="goBack()" style="color:white;width:33px;font-size:25px"></button>
+            <button class="button button-clear icon ion-ios-arrow-back" ng-click="goBack()"></button>
         </ion-nav-buttons>
-        <ion-nav-buttons side="right">
+        <!--<ion-nav-buttons side="right">
             <button class="button-clear" ng-click="commitOrder()" style="color:#fafb75;font-weight:600;">确定</button>
-        </ion-nav-buttons>
+        </ion-nav-buttons>-->
     </ion-nav-bar>
 
     <ion-content>
@@ -13,8 +13,12 @@
             <ion-list class="input-costume">
                 <ion-radio class="input-costume-radio" ng-model="order.channel" value={{pay.name}} ng-repeat="pay in payMethod">
                     <img style="width:30px;height:30px;float:left" src="{{pay.imgUri}}" />
-                    <p style="color:black;float:left;height:30px;margin-left:15px;margin-top:2px">{{pay.text}}</p>
+                    <p style="color:#383641;float:left;height:30px;margin-left:15px;margin-top:2px">{{pay.text}}</p>
                 </ion-radio>
+                <div class="spacer" style="height:20px;"></div>
+                <div style="margin-left:25%">
+                    <p class="makeorder-money-p" style="color:red;"><a style="font-size:30px">￥</a>总价<a style="font-size:25px">{{order.totalAmount}}</a>元</p>
+                </div>
             </ion-list>
 
             <!--<ion-radio ng-model="order.channel" value="alipay" style="height: 55px;">
@@ -26,7 +30,7 @@
                 <p style="color:black;float:left;height:30px;margin-left:15px;margin-top:2px">&nbsp;微信</p>
             </ion-radio>
         </ion-list>
-        <div class="spacer" style="height:20px;"></div>
-            <button class="allbutton  button-block button-small" style="width:150px;margin-left:28%; vertical-align:middle;background-color: red;border-color: red;color:white;" ng-click="commitOrder()">提交订单</button>-->
+        <div class="spacer" style="height:20px;"></div>-->
+            <button class="allbutton button-block button-small" style="width:90%;margin-left:5%;" ng-click="commitOrder()">确定支付</button>
     </ion-content>
 </ion-view>
