--- a/udqAutoApp/www/app/customer/order/regionSelect.html
+++ b/udqAutoApp/www/app/customer/order/regionSelect.html
@@ -1,7 +1,7 @@
 ﻿<ion-view view-title="选择小区" class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-chevron-left" ng-click="goBackOfRegionSelect()" style="color:white;width:33px;font-size:25px"></button>
+            <button class="button button-clear icon ion-ios-arrow-back" ng-click="goBackOfRegionSelect()"></button>
 
         </ion-nav-buttons>
 
@@ -10,7 +10,7 @@
         <ion-refresher on-refresh="doRefreshOfRegion()"></ion-refresher>
 
         <ion-list ng-repeat="district in districts">
-            <ion-radio ng-model="selectedAuto.selectedRegionId" id="selected" on-select="on_select()" ng-click="goBackOfRegionSelect()" value={{district.id}}><p style="color:black;">{{district.name}}</p></ion-radio>
+            <ion-radio ng-model="selectedAuto.selectedRegionId" id="selected" on-select="on_select()" ng-click="goBackOfRegionSelect()" value={{district.id}}><p style="color:#383641;">{{district.name}}</p></ion-radio>
         </ion-list>
 
     </ion-content>
