--- a/udqAutoApp/www/app/customer/register/register.html
+++ b/udqAutoApp/www/app/customer/register/register.html
@@ -1,11 +1,11 @@
 <ion-view title="注册" class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-chevron-left" ng-click="goBack()" style="color:white;width:33px;font-size:25px"></button>
+            <button class="button button-clear icon ion-ios-arrow-back" ng-click="goBack()"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
 
-    <ion-content padding="true" class="has-header">
+    <ion-content>
 
         <ion-list>
             <label class="item item-input input-costume">
@@ -19,7 +19,7 @@
                     <input id="verifyInput" type="tel" placeholder="请输入手机验证码" ng-model="userInfo.psd" style="color:white;font-weight:600;" class="input-costume">
                     
                 </label>
-                <button class="allbutton button-small" ng-disabled="verifyDisabled" style="width:120px;text-align:center;" ng-click="getValidateCode()">
+                <button class="registerInloginPage button-small" ng-disabled="verifyDisabled" style="width:120px;text-align:center;" ng-click="getValidateCode()">
                     {{tips}}
                 </button>
                 
@@ -36,7 +36,7 @@
             </ion-item>
 
         </ion-list>
-        <button class="allbutton button-block button-small" ng-click="register()">注册</button>
+        <button class="allbutton button-block button-small" style="width:90%;margin-left:5%;" ng-click="register()">注册</button>
 
     </ion-content>
 </ion-view>
