--- a/udqAutoApp/www/app/customer/washType/washTypeNote.html
+++ b/udqAutoApp/www/app/customer/washType/washTypeNote.html
@@ -1,7 +1,7 @@
 ﻿<ion-view view-title="{{type.name}}" class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-chevron-left" ng-click="goBackOfWashTypeNote()" style="color:white;width:33px;font-size:25px"></button>
+            <button class="button button-clear icon ion-ios-arrow-back" ng-click="goBackOfWashTypeNote()"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content>
