--- a/udqAutoApp/www/app/customer/washType/washtypeSelect.html
+++ b/udqAutoApp/www/app/customer/washType/washtypeSelect.html
@@ -1,7 +1,7 @@
 <ion-view view-title="洗车类型" class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-chevron-left" ng-click="goBackOfWashType()" style="color:white;width:33px;font-size:25px"></button>
+            <button class="button button-clear icon ion-ios-arrow-back" ng-click="goBackOfWashType()"></button>
         </ion-nav-buttons>
         <ion-nav-buttons side="right">
             <button class="button-clear" ng-click="goBackOfWashType()" style="color:#ffbc01;font-weight:600;">完成</button>
