--- a/udqAutoApp/www/app/employee/order/finishedOrder.html
+++ b/udqAutoApp/www/app/employee/order/finishedOrder.html
@@ -1,10 +1,13 @@
 ﻿<ion-view title="洗车店" class="ion-view-costum">
-    <ion-content padding="true" class="has-header">
+    <ion-content>
         <ion-refresher on-refresh="doRefresh()"></ion-refresher>
         <ion-list>
             <ion-item ng-repeat="order in orderInfo" ng-click="goToOrderInfo(order)" class="input-costume">
-                <p>车牌: {{order.autoPN}}</p>
-                <p>时间：{{order.orderTime}}，金额：{{order.finalAmount}}</p>
+                <div>
+                    <p>订单编号: {{order.orderNo}}</p>
+                    <p>车牌：{{order.autoPN}}，金额：<span class="a-custome">{{order.finalAmount|currency:'￥'}}</span></p>
+                    <span class="badge span-mark" ng-show="order.state==5">已评价</span>
+                </div>
 
                 <ion-option-button class="button-washstore-scan" ng-click="goToOrderInfo(order)">
                     查看
