--- a/udqAutoApp/www/app/employee/order/orderInfo.html
+++ b/udqAutoApp/www/app/employee/order/orderInfo.html
@@ -1,10 +1,10 @@
 ﻿<ion-view title="订单信息" class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-arrow-left-c" ng-click="goBack()" style="color:white;width:33px;font-size:25px"></button>
+            <button class="button button-clear icon ion-ios-arrow-back" ng-click="goBack()"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
-    <ion-content padding="true" class="has-header">
+    <ion-content>
         <ion-list>
             <label class="item item-input input-costume">
                 <p style="text-align:center;">订单基本信息</p>
@@ -42,7 +42,7 @@
                 <p>{{order.billTime}}</p>
             </label>
             <label class="item item-input input-costume">
-                <span class="input-label"><p>订单备注</p></span>
+                <span class="input-label"><p>用户需求</p></span>
                 <p>{{order.userNote}}</p>
             </label>
             <label class="item item-input input-costume">
@@ -59,7 +59,7 @@
             </label>
             <label class="item item-input input-costume">
                 <span class="input-label"><p>结算价格</p></span>
-                <p>{{order.finalAmount}}</p>
+                <a class="a-custome">{{order.finalAmount}}</a>
             </label>
         </ion-list>
         <div ng-show="order.state==2||order.state==3||order.state==4||order.state==5">
@@ -86,6 +86,10 @@
                     <label class="item item-input input-costume">
                         <span class="input-label"><p>客户评价</p></span>
                         <p>{{order.customerGrade}}</p>
+                    </label>
+                    <label class="item item-input input-costume">
+                        <span class="input-label"><p>客户意见</p></span>
+                        <p>{{order.gradeUserNote}}</p>
                     </label>
                 </ion-list>
          </div>
