--- a/udqAutoApp/www/app/employee/order/photograph.html
+++ b/udqAutoApp/www/app/employee/order/photograph.html
@@ -1,7 +1,7 @@
 ﻿<ion-view view-title="完成订单" class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-arrow-left-c" ng-click="goBackToOrder()" style="color:white;width:33px;font-size:25px"></button>
+            <button class="button button-clear icon ion-ios-arrow-back" ng-click="goBackToOrder()"></button>
         </ion-nav-buttons>
 
     </ion-nav-bar>
@@ -29,19 +29,19 @@
         </div>
         <div class="row">
             <div class="col">
-                <button ng-click="takePhoto(1)" class="button-clear ion-plus-round"></button>
+                <button ng-click="takePhoto(1)" class="button-clear ion-add-round"></button>
             </div>
             <div class="col">
                 <button ng-click="delete(1)" class="button-clear ion-minus-round"></button>
             </div>
             <div class="col">
-                <button ng-click="takePhoto(2)" class="button-clear ion-plus-round"></button>
+                <button ng-click="takePhoto(2)" class="button-clear ion-add-round"></button>
             </div>
             <div class="col">
                 <button ng-click="delete(2)" class="button-clear ion-minus-round"></button>
             </div>
             <div class="col">
-                <button ng-click="takePhoto(3)" class="button-clear ion-plus-round"></button>
+                <button ng-click="takePhoto(3)" class="button-clear ion-add-round"></button>
             </div>
             <div class="col">
                 <button ng-click="delete(3)" class="button-clear ion-minus-round"></button>
@@ -55,7 +55,7 @@
         </div>
         <div class="spacer" style="height:5px;"></div>
         <div class="row">
-            <button class="allbutton button-block button-small" ng-click="finish()">完成</button>
+            <button class="allbutton button-block button-small" style="width:90%;margin-left:5%;" ng-click="finish()">完成</button>
         </div>
         
 </ion-content>
