--- a/udqAutoApp/www/app/customer/home/home.html
+++ b/udqAutoApp/www/app/customer/home/home.html
@@ -1,4 +1,4 @@
-﻿<ion-view  align-title="center" title="点趣洗车" class="ion-view-costum">
+﻿<ion-view  align-title="center" title="点趣上门洗车" class="ion-view-costum">
     <div>
         <ion-nav-bar class="ion-nav-bar-costume" align-title="center"></ion-nav-bar>
     </div>
