--- a/udqAutoApp/www/app/customer/order/orderPay.html
+++ b/udqAutoApp/www/app/customer/order/orderPay.html
@@ -13,7 +13,7 @@
             <ion-list class="input-costume">
                 <ion-radio class="input-costume-radio" ng-model="order.channel" value={{pay.name}} ng-repeat="pay in payMethod">
                     <img style="width:30px;height:30px;float:left" src="{{pay.imgUri}}" />
-                    <p style="color:#383641;float:left;height:30px;margin-left:15px;margin-top:2px">{{pay.text}}</p>
+                    <p style="color:#383641;float:left;height:30px;margin-left:15px;margin-top:2px">{{pay.text}}<a class="a-custome" ng-show="pay.name=='udq'">(余额：{{user.balance}}元)</a></p>
                 </ion-radio>
                 <div class="spacer" style="height:20px;"></div>
                 <div style="margin-left:25%">
@@ -31,6 +31,6 @@
             </ion-radio>
         </ion-list>
         <div class="spacer" style="height:20px;"></div>-->
-            <button class="allbutton button-block button-small" style="width:90%;margin-left:5%;" ng-click="commitOrder()">确定支付</button>
+            <button class="allbutton button-block button-small" ng-disabled="disabled" style="width:90%;margin-left:5%;" ng-click="commitOrder()">确定支付</button>
     </ion-content>
 </ion-view>
