--- a/udqAutoApp/www/app/employee/order/orderInfo.html
+++ b/udqAutoApp/www/app/employee/order/orderInfo.html
@@ -34,8 +34,20 @@
                 <p>{{order.autoPN}}</p>
             </label>
             <label class="item item-input input-costume">
+                <span class="input-label"><p>车辆品牌</p></span>
+                <p>{{order.autoBrand}}</p>
+            </label>
+            <label class="item item-input input-costume">
+                <span class="input-label"><p>车辆型号</p></span>
+                <p>{{order.autoModel}}</p>
+            </label>
+            <label class="item item-input input-costume">
                 <span class="input-label"><p>所属小区</p></span>
                 <p>{{order.regionName}}</p>
+            </label>
+            <label class="item item-input input-costume">
+                <span class="input-label"><p>车位</p></span>
+                <p>{{order.autoPosition}}</p>
             </label>
             <label class="item item-input input-costume">
                 <span class="input-label"><p>下单时间</p></span>
