--- a/udqAutoApp/www/app/customer/member/memberInfoEdit.html
+++ b/udqAutoApp/www/app/customer/member/memberInfoEdit.html
@@ -21,7 +21,7 @@
                     <input type="text" name="mobile" ng-model='user.mobile' placeholder="请输入您要变更的手机号" style="color:white;" required>
                 </label>
                 <ion-item class="input-costume" style="color:#383641;">
-                    <input  type="radio" name="sex" checked ng-model="user.sex" value='1' />男士&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <input  type="radio" name="sex" checked ng-model="user.sex" value='1' />男士&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <input  type="radio" name="sex" ng-model="user.sex" value='2' />女士
                 </ion-item>
             </ion-list>
