--- a/udqAutoApp/www/app/customer/member/recharge.html
+++ b/udqAutoApp/www/app/customer/member/recharge.html
@@ -3,21 +3,22 @@
         <ion-nav-buttons side="left">
             <button class="button button-clear icon ion-ios-arrow-back" ng-click="goBack()"></button>
         </ion-nav-buttons>
-        <ion-nav-buttons side="right">
-            <button class="button-clear" ng-click="recharge()" style="color:#fafb75;font-weight:600;">确定</button>
-        </ion-nav-buttons>
     </ion-nav-bar>
 
     <ion-content>
         <ion-list>
             <ion-list class="input-costume">
-                <label class="item item-input input-costume">
-                    <input type="tel" name="userName" placeholder="请输入充值金额" ng-model="balance.amount" class="input-costume" style="color:white;font-weight:600;" required>
-                </label>
+                <ion-item class="input-costume" style="color:#383641;">
+                    <span class="span-black">请选择金额:</span>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <input type="radio" name="amount" checked ng-model="balance.amount" value='0.01' />0.01&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <input type="radio" name="amount" ng-model="balance.amount" value='50' />50&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <input type="radio" name="amount" ng-model="balance.amount" value='100' />100
+                </ion-item>
                 <ion-radio class="input-costume-radio" ng-model="balance.channel" value={{pay.name}} ng-repeat="pay in payMethod">
                     <img style="width:30px;height:30px;float:left" src="{{pay.imgUri}}" />
                     <p style="color:black;float:left;height:30px;margin-left:15px;margin-top:2px">{{pay.text}}</p>
                 </ion-radio>
             </ion-list>
+            <button class="allbutton button-block button-small" ng-disabled="disabled" style="width:90%;margin-left:5%;" ng-click="recharge()">确定</button>
     </ion-content>
 </ion-view>
