--- a/udqAutoApp/www/app/customer/order/recentlyOrder.html
+++ b/udqAutoApp/www/app/customer/order/recentlyOrder.html
@@ -6,6 +6,7 @@
                 <div ng-click="goToSeeOrder(order)">
                     <p>订单编号：{{order.orderNo}}</p>
                     <p>车牌号：{{order.autoPN}} &nbsp&nbsp&nbsp金额：<span class="a-custome">{{order.finalAmount|currency:'￥'}}</span></p>
+                    <p>洗车类型：{{order.washTypeName}}</p>
                     <span class="badge span-mark" ng-show="order.state==0">未支付</span>
                     <span class="badge span-mark" ng-show="order.state==1">已下单</span>
                     <span class="badge span-mark" ng-show="order.state==10">车主取消</span>
