--- a/udqAutoApp/www/app/employee/order/newOrder.html
+++ b/udqAutoApp/www/app/employee/order/newOrder.html
@@ -5,6 +5,7 @@
             <ion-item ng-repeat="order in orderInfo" ng-click="goToOrderInfo(order)" class="input-costume">
                 <p>订单编号: {{order.orderNo}}</p>
                 <p>车牌：{{order.autoPN}}，金额：<span class="a-custome">{{order.finalAmount|currency:'￥'}}</span></p>
+                <p>洗车类型：{{order.washTypeName}}</p>
 
                 <ion-option-button class="button-washstore-accept" ng-click="acceptOrder(order)">
                     接收订单
