--- a/udqAutoApp/www/app/employee/order/photograph.html
+++ b/udqAutoApp/www/app/employee/order/photograph.html
@@ -29,19 +29,19 @@
         </div>
         <div class="row">
             <div class="col">
-                <button ng-click="takePhoto(1)" class="button-clear ion-add-round"></button>
+                <button ng-click="showActionsheet(1)" class="button-clear ion-add-round"></button>
             </div>
             <div class="col">
                 <button ng-click="delete(1)" class="button-clear ion-minus-round"></button>
             </div>
             <div class="col">
-                <button ng-click="takePhoto(2)" class="button-clear ion-add-round"></button>
+                <button ng-click="showActionsheet(2)" class="button-clear ion-add-round"></button>
             </div>
             <div class="col">
                 <button ng-click="delete(2)" class="button-clear ion-minus-round"></button>
             </div>
             <div class="col">
-                <button ng-click="takePhoto(3)" class="button-clear ion-add-round"></button>
+                <button ng-click="showActionsheet(3)" class="button-clear ion-add-round"></button>
             </div>
             <div class="col">
                 <button ng-click="delete(3)" class="button-clear ion-minus-round"></button>
